--- a/views/aliens/new.pug
+++ b/views/aliens/new.pug
@@ -17,3 +17,5 @@ block content
           input#exampleInputPassword1.form-control(name='planet', type='text', placeholder='Not Earch')
         button.btn.btn-default(type='submit') Submit
     .col-xs-4
+block theMarquee
+  img(src='https://www.colourbox.com/preview/4226251-cartoon-ufo.jpg')
